// (c) Copyright 2021 Christian Saide
// SPDX-License-Identifier: GPL-3.0

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package topic;

// A message topic.
message Topic {
    // The name of this message topic.
    string name = 1;
    // The timestamp of when this [Value] was created.
    google.protobuf.Timestamp created = 3;
    // The timestamp of when this [Value] was last updated.
    google.protobuf.Timestamp updated = 4;
}

// Describes a create topic request.
message CreateRequest {
    // The name of the topic to create.
    string name = 1;
}

// Describes a get topic request.
message GetRequest {
    // The name of the message topic to retrieve.
    string name = 1;
}

// Describes a list topic request.
message ListRequest {}

// Describes a delete topic request.
message DeleteRequest {
    // The name of the message topic to delete.
    string name = 1;
}

// Describes an update topic request.
message UpdateRequest {
    // The name of the message topic to update.
    string name = 1;
}

// The TopicService exposes Topic management functionality.
service TopicService {
    // Create a new topic based on the supplied configuration. The newly created
    // topic is then returned to the caller for later user.
    rpc Create (CreateRequest) returns (Topic);

    // Get the specified topic.
    rpc Get (GetRequest) returns (Topic);

    // List the filtered list of topics.
    rpc List (ListRequest) returns (stream Topic);

    // Update a given topic based on the supplied configuration.
    rpc Update (UpdateRequest) returns (Topic);

    // Delete the specified queue fully releasing all resources associated with it.
    rpc Delete (DeleteRequest) returns (Topic);
}
